# H.A.S.

./: .dockerignore  .gitignore  README.md  docker-compose.yml  start-has.bat  stop-has.bat
backend/: .env.example  Dockerfile  README.md  alembic.ini  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_scheduling.py  0003_auth.py  0004_resume.py  0005_otp.py
backend/app/: api.py  auth.py  config.py  database.py  main.py  models.py  scheduler.py
backend/app/routers/: analytics.py  applications.py  auth.py  booking.py  dev.py  emails.py  jobs.py  slots.py
backend/app/services/: llm.py  mailer.py  resume.py  scheduling.py  scoring.py  storage.py  templates.py
db/: schema.sql
docs/: auth-email-otp.md  auth-magic-link.md
frontend/: Dockerfile  next.config.mjs  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/admin/allowlist/: page.tsx
frontend/app/admin/analytics/: page.tsx
frontend/app/admin/applications/: page.tsx
frontend/app/admin/emails/: page.tsx
frontend/app/admin/jobs/: page.tsx
frontend/app/admin/outcomes/: page.tsx
frontend/app/admin/resumes/: page.tsx
frontend/app/admin/settings/: page.tsx
frontend/app/admin/slots/: page.tsx
frontend/app/apply/: page.tsx
frontend/app/apply/skills/: page.tsx
frontend/app/auth/verify/: page.tsx
frontend/app/booking/[token]/: page.tsx
frontend/app/login/: page.tsx
frontend/components/: AdminBar.tsx
frontend/lib/: session.ts
